--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
     "react": "^16.8.3",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.8.3",
-    "react-redux": "^6.0.1",
-    "react-scripts": "2.1.5",
-    "redux": "^4.0.1"
+    "react-scripts": "2.1.5"
   },
   "scripts": {
     "start": "react-scripts start",
